CLOSED FIXED 36827
[Qt] Patch to amend the Content-Disposition fix [36395]
https://bugs.webkit.org/show_bug.cgi?id=36827
Summary [Qt] Patch to amend the Content-Disposition fix [36395]
Dawit A.
Reported Tuesday, March 30, 2010 4:16:23 PM UTC
Created attachment 52040 [details] Amendement for the Content-Disposition fix... Based on the discussion in comments #39-42 in bug #36395, this patch amends the factored out function of the Content-Disposition fix to be more generic...
Attachments
Amendement for the Content-Disposition fix... (6.09 KB, patch)
2010-03-30 08:16 PDT, Dawit A.
no flags
Amendment to the Content-Disposition fix II... (6.34 KB, patch)
2010-03-30 08:30 PDT, Dawit A.
beidson: review+
commit-queue: commit-queue-
Amendment to the Content-Disposition fix III... (6.55 KB, patch)
2010-04-07 07:07 PDT, Dawit A.
hausmann: review+
WebKit Review Bot
Comment 1 Tuesday, March 30, 2010 4:21:27 PM UTC
Attachment 52040 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dawit A.
Comment 2 Tuesday, March 30, 2010 4:30:34 PM UTC
Created attachment 52041 [details] Amendment to the Content-Disposition fix II... Fixed style check failures and updated ChangeLog comments.
Brady Eidson
Comment 3 Tuesday, March 30, 2010 5:59:56 PM UTC
Comment on attachment 52041 [details] Amendment to the Content-Disposition fix II... r+ Thanks!
WebKit Commit Bot
Comment 4 Wednesday, April 7, 2010 8:09:10 AM UTC
Comment on attachment 52041 [details] Amendment to the Content-Disposition fix II... Rejecting patch 52041 from commit-queue. Failed to run "['WebKitTools/Scripts/build-webkit', '--debug']" exit_code: 1 Last 500 characters of output: Users/eseidel/Projects/CommitQueue/WebCore/page/XSSAuditor.cpp -o /Users/eseidel/Projects/CommitQueue/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/i386/XSSAuditor.o ** BUILD FAILED ** The following build commands failed: WebCore: Distributed-CompileC /Users/eseidel/Projects/CommitQueue/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/i386/Document.o /Users/eseidel/Projects/CommitQueue/WebCore/dom/Document.cpp normal i386 c++ com.apple.compilers.gcc.4_2 (1 failure) Full output: http://webkit-commit-queue.appspot.com/results/1608274
Simon Hausmann
Comment 5 Wednesday, April 7, 2010 10:03:26 AM UTC
(In reply to comment #4) > (From update of attachment 52041 [details]) > Rejecting patch 52041 from commit-queue. This is the reason for the build issue: In file included from /Users/eseidel/Projects/CommitQueue/WebCore/dom/Document.cpp:81: /Users/eseidel/Projects/CommitQueue/WebCore/platform/network/HTTPParsers.h:45: error: conflicting declaration ‘None’ /Users/eseidel/Projects/CommitQueue/WebCore/page/SpatialNavigation.h:87: error: ‘WebCore::None’ has a previous declaration as ‘WebCore::RectsAlignment WebCore::None’ The two enum values - None - conflict
Dawit A.
Comment 6 Wednesday, April 7, 2010 3:07:51 PM UTC
Created attachment 52735 [details] Amendment to the Content-Disposition fix III... Prefixed all the ContentDispositionType enums with "ContentDisposition" to avoid namespace conflicts which can cause compile errors...
Simon Hausmann
Comment 7 Wednesday, April 7, 2010 3:12:30 PM UTC
Comment on attachment 52735 [details] Amendment to the Content-Disposition fix III... LGTM :)
Simon Hausmann
Comment 8 Wednesday, April 7, 2010 3:15:02 PM UTC
Simon Hausmann
Comment 9 Wednesday, April 7, 2010 3:41:51 PM UTC
Revision r57208 cherry-picked into qtwebkit-2.0 with commit 50d5e029b4a6aa5dc7c39160b275bd7c1d78540c
Note You need to log in before you can comment on or make changes to this bug.