https://bugs.webkit.org/show_bug.cgi?id=36827

Patch by Dawit Alemayehu <adawit@kde.org> on 2010-04-07
Reviewed by Simon Hausmann.

WebCore:

Replaced the 'shouldTreatAsAttachment' function with a more generic
function that returns the content disposition type.

See comments 39-42 in https://bugs.webkit.org/show_bug.cgi?id=36395

* platform/network/HTTPParsers.cpp:
(WebCore::contentDispositionType):
* platform/network/HTTPParsers.h:
(WebCore::):

WebKit/chromium:

Updated the WebCore::shouldTreatAsAttachement function call with the
new more generic replacement WebCore::contentDispositionType.

See comments 39-42 in https://bugs.webkit.org/show_bug.cgi?id=36395

* src/FrameLoaderClientImpl.cpp:
(WebKit::FrameLoaderClientImpl::dispatchDecidePolicyForMIMEType):

WebKit/qt:

Updated the WebCore::shouldTreatAsAttachement function call with the
new more generic replacement WebCore::contentDispositionType.

See comments 39-42 in https://bugs.webkit.org/show_bug.cgi?id=36395

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::dispatchDecidePolicyForMIMEType):

Canonical link: https://commits.webkit.org/48501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57208 268f45cc-cd09-0410-ab3c-d52691b4dbfc