WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -969,8 +969,9 @@ WebCore::Frame* FrameLoaderClientQt::dispatchCreatePage()
 void FrameLoaderClientQt::dispatchDecidePolicyForMIMEType(FramePolicyFunction function, const WebCore::String& MIMEType, const WebCore::ResourceRequest&)
 {
     // we need to call directly here
-    if (WebCore::shouldTreatAsAttachment(m_frame->loader()->activeDocumentLoader()->response()))
-        callPolicyFunction(function, PolicyDownload);    
+    const ResourceResponse& response = m_frame->loader()->activeDocumentLoader()->response();
+    if (WebCore::contentDispositionType(response.httpHeaderField("Content-Disposition")) == WebCore::ContentDispositionAttachment)
+        callPolicyFunction(function, PolicyDownload);
     else if (canShowMIMEType(MIMEType))
         callPolicyFunction(function, PolicyUse);
     else
